# kcore-rust

./: .gitignore  .tmp-cloudinit-nopasswd.yaml  Cargo.toml  LICENSE  Makefile  PRICING.md  README.md  flake.nix
.cursor/rules/: git-commit-no-tool-attribution.mdc  git-pr-workflow.mdc  nix-develop-shell.mdc  non-interactive-automation.mdc
.github/workflows/: ci.yml  formal-checks.yml
crates/controller/: Cargo.toml  build.rs
crates/controller/src/: auth.rs  config.rs  db.rs  disk_reconciler.rs  main.rs  nixgen.rs  node_client.rs  path_safety.rs  replication.rs  replication_policy.rs  scheduler.rs
crates/controller/src/grpc/: admin.rs  controller.rs  diff.rs  helpers.rs  mod.rs  validation.rs
crates/dashboard/: Cargo.toml  build.rs
crates/dashboard/assets/: dashboard.css
crates/dashboard/src/: api.rs  app.rs  app_server.rs  config.rs  controller_client.rs  dto.rs  format.rs  lib.rs  main.rs  mappers.rs  state.rs
crates/dashboard/tests/: error_handling_test.rs  http_integration.rs  install_manifest_test.rs  pagination_test.rs  state_config.rs
crates/dashboard/tests/support/: mod.rs
crates/kcore-console/: Cargo.toml
crates/kcore-disko-types/: Cargo.toml
crates/kcore-disko-types/src/: lib.rs
crates/kcore-sanitize/: Cargo.toml
crates/kcore-sanitize/src/: lib.rs
crates/kctl/: Cargo.toml  build.rs
crates/kctl/proptest-regressions/: client.txt
crates/kctl/src/: apply_summary.rs  client.rs  config.rs  main.rs  output.rs  path_safety.rs  pki.rs
crates/kctl/src/commands/: apply.rs  certs.rs  cluster.rs  compliance.rs  conflict.rs  container.rs  disk_layout.rs  image.rs  mod.rs  network.rs  node.rs  ssh_key.rs  storage_class.rs  vm.rs  volume.rs  workload.rs
crates/node-agent/: Cargo.toml  build.rs
crates/node-agent/src/: auth.rs  config.rs  issue_screen.rs  main.rs  path_safety.rs  registration.rs
crates/node-agent/src/disk/: classifier.rs  lsblk.rs  mod.rs
crates/node-agent/src/grpc/: admin.rs  compute.rs  container.rs  info.rs  mod.rs  storage.rs
crates/node-agent/src/runtime/: cni.rs  containerd_runtime.rs  mod.rs
crates/node-agent/src/storage/: mod.rs
crates/node-agent/src/vmm/: mod.rs  types.rs
docs/: Architecture.md  README.md  add-new-node.md  certifications.md  compliance-enablement-evaluation.md  day-2-filesystem-operations.md  file-structure.md  formal-methods-and-verification.md  ha-crdt-replication.md  heartbeat.md  images.md  kctl-commands-and-workflows.md  licensing.md  migrations.md  mtls-bootstrap-and-auth.md  networking.md  nix-vm-config-generation.md  node-install-bootstrap-flow.md  scheduler.md  security-k8s-vs-kcore.md  security.md  storage.md  ubuntu1-server-map.md  zero-external-resolution-algorithm.md
docs/dev/: ha-crdt-replication.md  zero-external-resolution-algorithm.md
docs/user/: README.md
examples/cluster/: prod.yaml
examples/container/: nginx.yaml
examples/network/: bridge-vlan.yaml  nat.yaml  vxlan.yaml
examples/node-install/: agent.yaml  controller.yaml  ha-controller.yaml
examples/security-groups/: expose-nginx-host.yaml
examples/ssh-key/: deploy-key.yaml
examples/vm/: debian-lvm.yaml  debian-zfs.yaml
modules/: kcore-branding.nix  kcore-dashboard.nix  kcore-disko.nix  kcore-minimal.nix
modules/ch-vm/: cloud-init.nix  default.nix  helpers.nix  networking.nix  options.nix  vm-service.nix
proto/: controller.proto  node.proto
scripts/: check-replication-trace.py  check-tla.sh  deploy-kcore-to-host.sh  soak-replication.sh  test-replication-trace.sh
specs/tla/: ControllerNodeReconcile.cfg  ControllerNodeReconcile.tla  ControllerReplication.cfg  ControllerReplication.tla  CrossDcReplication.cfg  CrossDcReplication.tla  DiskLayoutReconcile.cfg  DiskLayoutReconcile.tla  README.md
specs/tla/traces/: replication-sample.json
tests/: disko-module.nix  vm-module.nix
