[package]
name = "kcore-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
kcore-sanitize = { path = "../kcore-sanitize" }
clap = { version = "4", features = ["derive"] }
pem = "3"
prost = "0.13"
prost-types = "0.13"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["tls", "transport"] }
tonic-health = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.22.0", features = ["v4"] }
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem", "x509-parser"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
time = "0.3"
x509-parser = "0.18"
libc = "0.2"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
proptest = "1.11"

[lints]
workspace = true
