[package]
name = "kcore-dashboard"
version = "0.1.0"
edition = "2021"
description = "kcore web dashboard (Leptos SSR, controller gRPC)"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "kcore-dashboard"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.8"
http = "1"
leptos = { version = "0.8", features = ["ssr"] }
leptos_axum = "0.8"
leptos_meta = { version = "0.8", features = ["ssr"] }
leptos_router = { version = "0.8", features = ["ssr"] }
prost = "0.13"
prost-types = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["tls", "transport"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-stream = { version = "0.1", features = ["net"] }
proptest = "1.11"

[build-dependencies]
tonic-build = "0.12"

[lints]
workspace = true

[package.metadata.leptos]
output-name = "kcore-dashboard"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "0.0.0.0:8080"
env = "PROD"
