[package]
name = "kcore-console"
version = "0.1.0"
edition = "2021"
description = "kcore hypervisor appliance TUI (Ratatui / crossterm)"
build = "build.rs"

[dependencies]
chrono = { version = "0.4" }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
ctrlc = "3"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
