[package]
name = "kcore-kctl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
kcore-sanitize = { path = "../kcore-sanitize" }
dirs = "6"
prost = "0.13"
prost-types = "0.13"
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem", "x509-parser"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
time = "0.3"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tonic = { version = "0.12", features = ["tls", "transport"] }
anyhow = "1.0.102"
tokio-stream = "0.1"
base64 = "0.22.1"
aws-lc-rs = "1.16.2"
x509-parser = { version = "0.18.1", features = ["verify"] }

[dev-dependencies]
tempfile = "3"
tonic-health = "0.12"
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies]
tonic-build = "0.12"

[lints]
workspace = true
