[package]
name = "kcore-node-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
kcore-sanitize = { path = "../kcore-sanitize" }
kcore-disko-types = { path = "../kcore-disko-types" }
hostname = "0.4"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy"] }
http-body-util = "0.1"
hyperlocal = "0.9"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["tls"] }
tonic-health = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pem = "3"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
time = "0.3"
x509-parser = "0.18"
anyhow = "1.0.102"
libc = "0.2"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem"] }
tempfile = "3"
proptest = "1.11"

[lints]
workspace = true
